lei20_21_s4_2dl_02/HelpdeskService/helpdesk.app.executorTarefasAutomaticas/src/main/java/eapli/helpdesk/app/executorTarefasAutomaticas/automaticsTaskScript/AutomaticTaskScriptGrammarParser.java
// Generated from C:/Users/grtjo/Documents/ISEP_Cadeiras/2Ano/2Semestre/LAPR4/lei20_21_s4_2dl_02/HelpdeskService/helpdesk.app.executorTarefasAutomaticas/src/main/java/eapli/helpdesk/app/executorTarefasAutomaticas/automaticsTaskScript\AutomaticTaskScriptGrammar.g4 by ANTLR 4.9.1
package eapli.helpdesk.app.executorTarefasAutomaticas.automaticsTaskScript;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AutomaticTaskScriptGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, START=11, PARENTESE_RETO_ABRIR=12, PARENTESE_RETO_FECHAR=13, 
		CHAVETA_ABRIR=14, CHAVETA_FECHAR=15, PARENTESE_ABRIR=16, PARENTESE_FECHAR=17, 
		PONTO_E_VIRGULA=18, NUM=19, MULTIPLICACAO=20, DIVISAO=21, SOMA=22, SUBTRACAO=23, 
		AND=24, OR=25, CLASSE=26, XML_ATRIBUTO=27, XML_ATRIBUTO2=28, FICHEIRO_XML=29, 
		ALFANUM=30, FORM_ATRIBUTO=31, ALFANUM2=32, WS=33;
	public static final int
		RULE_start = 0, RULE_script = 1, RULE_instrucao_script = 2, RULE_condicao = 3, 
		RULE_operacao_matematica = 4, RULE_chamar_funcao = 5, RULE_funcaoEnviarEmail = 6, 
		RULE_funcaoMudarDistrito = 7, RULE_funcaoMudarTelemovel = 8, RULE_funcaoMudarConcelho = 9, 
		RULE_funcaoBuscarInfoXML = 10, RULE_passos = 11, RULE_buscarElemento = 12, 
		RULE_alterarElemento = 13, RULE_funcaoEnviarEmailComValor = 14, RULE_inteiro = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "script", "instrucao_script", "condicao", "operacao_matematica", 
			"chamar_funcao", "funcaoEnviarEmail", "funcaoMudarDistrito", "funcaoMudarTelemovel", 
			"funcaoMudarConcelho", "funcaoBuscarInfoXML", "passos", "buscarElemento", 
			"alterarElemento", "funcaoEnviarEmailComValor", "inteiro"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'EnviarEmail'", "','", "'MudarDistrito'", "'MudarTelemovel'", 
			"'MudarConcelho'", "'Ficheiro'", "'Elemento'", "'Buscar'", "'Alterar'", 
			"'START'", "'['", "']'", "'{'", "'}'", "'('", "')'", "';'", null, "'*'", 
			"'/'", "'+'", "'-'", "'AND'", "'OR'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "START", 
			"PARENTESE_RETO_ABRIR", "PARENTESE_RETO_FECHAR", "CHAVETA_ABRIR", "CHAVETA_FECHAR", 
			"PARENTESE_ABRIR", "PARENTESE_FECHAR", "PONTO_E_VIRGULA", "NUM", "MULTIPLICACAO", 
			"DIVISAO", "SOMA", "SUBTRACAO", "AND", "OR", "CLASSE", "XML_ATRIBUTO", 
			"XML_ATRIBUTO2", "FICHEIRO_XML", "ALFANUM", "FORM_ATRIBUTO", "ALFANUM2", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AutomaticTaskScriptGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AutomaticTaskScriptGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public TerminalNode START() { return getToken(AutomaticTaskScriptGrammarParser.START, 0); }
		public TerminalNode CHAVETA_ABRIR() { return getToken(AutomaticTaskScriptGrammarParser.CHAVETA_ABRIR, 0); }
		public ScriptContext script() {
			return getRuleContext(ScriptContext.class,0);
		}
		public TerminalNode CHAVETA_FECHAR() { return getToken(AutomaticTaskScriptGrammarParser.CHAVETA_FECHAR, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskScriptGrammarListener ) ((AutomaticTaskScriptGrammarListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskScriptGrammarListener ) ((AutomaticTaskScriptGrammarListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomaticTaskScriptGrammarVisitor ) return ((AutomaticTaskScriptGrammarVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			match(START);
			setState(33);
			match(CHAVETA_ABRIR);
			setState(34);
			script();
			setState(35);
			match(CHAVETA_FECHAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScriptContext extends ParserRuleContext {
		public List<Instrucao_scriptContext> instrucao_script() {
			return getRuleContexts(Instrucao_scriptContext.class);
		}
		public Instrucao_scriptContext instrucao_script(int i) {
			return getRuleContext(Instrucao_scriptContext.class,i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskScriptGrammarListener ) ((AutomaticTaskScriptGrammarListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskScriptGrammarListener ) ((AutomaticTaskScriptGrammarListener)listener).exitScript(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomaticTaskScriptGrammarVisitor ) return ((AutomaticTaskScriptGrammarVisitor<? extends T>)visitor).visitScript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(37);
				instrucao_script();
				}
				}
				setState(40); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << XML_ATRIBUTO))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Instrucao_scriptContext extends ParserRuleContext {
		public CondicaoContext condicao() {
			return getRuleContext(CondicaoContext.class,0);
		}
		public Chamar_funcaoContext chamar_funcao() {
			return getRuleContext(Chamar_funcaoContext.class,0);
		}
		public Instrucao_scriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucao_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskScriptGrammarListener ) ((AutomaticTaskScriptGrammarListener)listener).enterInstrucao_script(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskScriptGrammarListener ) ((AutomaticTaskScriptGrammarListener)listener).exitInstrucao_script(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomaticTaskScriptGrammarVisitor ) return ((AutomaticTaskScriptGrammarVisitor<? extends T>)visitor).visitInstrucao_script(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Instrucao_scriptContext instrucao_script() throws RecognitionException {
		Instrucao_scriptContext _localctx = new Instrucao_scriptContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instrucao_script);
		try {
			setState(44);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case XML_ATRIBUTO:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				condicao(0);
				}
				break;
			case T__1:
			case T__3:
			case T__4:
			case T__5:
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				chamar_funcao();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicaoContext extends ParserRuleContext {
		public Operacao_matematicaContext operacao_matematica() {
			return getRuleContext(Operacao_matematicaContext.class,0);
		}
		public List<CondicaoContext> condicao() {
			return getRuleContexts(CondicaoContext.class);
		}
		public CondicaoContext condicao(int i) {
			return getRuleContext(CondicaoContext.class,i);
		}
		public TerminalNode AND() { return getToken(AutomaticTaskScriptGrammarParser.AND, 0); }
		public TerminalNode OR() { return getToken(AutomaticTaskScriptGrammarParser.OR, 0); }
		public CondicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskScriptGrammarListener ) ((AutomaticTaskScriptGrammarListener)listener).enterCondicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskScriptGrammarListener ) ((AutomaticTaskScriptGrammarListener)listener).exitCondicao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomaticTaskScriptGrammarVisitor ) return ((AutomaticTaskScriptGrammarVisitor<? extends T>)visitor).visitCondicao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondicaoContext condicao() throws RecognitionException {
		return condicao(0);
	}

	private CondicaoContext condicao(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		CondicaoContext _localctx = new CondicaoContext(_ctx, _parentState);
		CondicaoContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_condicao, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(47);
			operacao_matematica();
			}
			_ctx.stop = _input.LT(-1);
			setState(57);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(55);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new CondicaoContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_condicao);
						setState(49);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(50);
						match(AND);
						setState(51);
						condicao(4);
						}
						break;
					case 2:
						{
						_localctx = new CondicaoContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_condicao);
						setState(52);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(53);
						match(OR);
						setState(54);
						condicao(3);
						}
						break;
					}
					} 
				}
				setState(59);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Operacao_matematicaContext extends ParserRuleContext {
		public Token resultado;
		public InteiroContext inteiro() {
			return getRuleContext(InteiroContext.class,0);
		}
		public TerminalNode PONTO_E_VIRGULA() { return getToken(AutomaticTaskScriptGrammarParser.PONTO_E_VIRGULA, 0); }
		public TerminalNode XML_ATRIBUTO() { return getToken(AutomaticTaskScriptGrammarParser.XML_ATRIBUTO, 0); }
		public Operacao_matematicaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacao_matematica; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskScriptGrammarListener ) ((AutomaticTaskScriptGrammarListener)listener).enterOperacao_matematica(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskScriptGrammarListener ) ((AutomaticTaskScriptGrammarListener)listener).exitOperacao_matematica(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomaticTaskScriptGrammarVisitor ) return ((AutomaticTaskScriptGrammarVisitor<? extends T>)visitor).visitOperacao_matematica(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Operacao_matematicaContext operacao_matematica() throws RecognitionException {
		Operacao_matematicaContext _localctx = new Operacao_matematicaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_operacao_matematica);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			((Operacao_matematicaContext)_localctx).resultado = match(XML_ATRIBUTO);
			setState(61);
			match(T__0);
			setState(62);
			inteiro();
			setState(63);
			match(PONTO_E_VIRGULA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Chamar_funcaoContext extends ParserRuleContext {
		public FuncaoEnviarEmailContext funcaoEnviarEmail() {
			return getRuleContext(FuncaoEnviarEmailContext.class,0);
		}
		public FuncaoMudarDistritoContext funcaoMudarDistrito() {
			return getRuleContext(FuncaoMudarDistritoContext.class,0);
		}
		public FuncaoMudarTelemovelContext funcaoMudarTelemovel() {
			return getRuleContext(FuncaoMudarTelemovelContext.class,0);
		}
		public FuncaoMudarConcelhoContext funcaoMudarConcelho() {
			return getRuleContext(FuncaoMudarConcelhoContext.class,0);
		}
		public FuncaoBuscarInfoXMLContext funcaoBuscarInfoXML() {
			return getRuleContext(FuncaoBuscarInfoXMLContext.class,0);
		}
		public Chamar_funcaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chamar_funcao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskScriptGrammarListener ) ((AutomaticTaskScriptGrammarListener)listener).enterChamar_funcao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskScriptGrammarListener ) ((AutomaticTaskScriptGrammarListener)listener).exitChamar_funcao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomaticTaskScriptGrammarVisitor ) return ((AutomaticTaskScriptGrammarVisitor<? extends T>)visitor).visitChamar_funcao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Chamar_funcaoContext chamar_funcao() throws RecognitionException {
		Chamar_funcaoContext _localctx = new Chamar_funcaoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_chamar_funcao);
		try {
			setState(70);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				funcaoEnviarEmail();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				funcaoMudarDistrito();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(67);
				funcaoMudarTelemovel();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 4);
				{
				setState(68);
				funcaoMudarConcelho();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 5);
				{
				setState(69);
				funcaoBuscarInfoXML();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncaoEnviarEmailContext extends ParserRuleContext {
		public Token assunto;
		public Token corpo;
		public TerminalNode PARENTESE_ABRIR() { return getToken(AutomaticTaskScriptGrammarParser.PARENTESE_ABRIR, 0); }
		public TerminalNode PARENTESE_FECHAR() { return getToken(AutomaticTaskScriptGrammarParser.PARENTESE_FECHAR, 0); }
		public TerminalNode PONTO_E_VIRGULA() { return getToken(AutomaticTaskScriptGrammarParser.PONTO_E_VIRGULA, 0); }
		public List<TerminalNode> ALFANUM() { return getTokens(AutomaticTaskScriptGrammarParser.ALFANUM); }
		public TerminalNode ALFANUM(int i) {
			return getToken(AutomaticTaskScriptGrammarParser.ALFANUM, i);
		}
		public FuncaoEnviarEmailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcaoEnviarEmail; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskScriptGrammarListener ) ((AutomaticTaskScriptGrammarListener)listener).enterFuncaoEnviarEmail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskScriptGrammarListener ) ((AutomaticTaskScriptGrammarListener)listener).exitFuncaoEnviarEmail(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomaticTaskScriptGrammarVisitor ) return ((AutomaticTaskScriptGrammarVisitor<? extends T>)visitor).visitFuncaoEnviarEmail(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncaoEnviarEmailContext funcaoEnviarEmail() throws RecognitionException {
		FuncaoEnviarEmailContext _localctx = new FuncaoEnviarEmailContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_funcaoEnviarEmail);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(T__1);
			setState(73);
			match(PARENTESE_ABRIR);
			setState(74);
			((FuncaoEnviarEmailContext)_localctx).assunto = match(ALFANUM);
			setState(75);
			match(T__2);
			setState(76);
			((FuncaoEnviarEmailContext)_localctx).corpo = match(ALFANUM);
			setState(77);
			match(PARENTESE_FECHAR);
			setState(78);
			match(PONTO_E_VIRGULA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncaoMudarDistritoContext extends ParserRuleContext {
		public Token campoDoDistritoNoFormulario;
		public TerminalNode PARENTESE_ABRIR() { return getToken(AutomaticTaskScriptGrammarParser.PARENTESE_ABRIR, 0); }
		public TerminalNode PARENTESE_FECHAR() { return getToken(AutomaticTaskScriptGrammarParser.PARENTESE_FECHAR, 0); }
		public TerminalNode PONTO_E_VIRGULA() { return getToken(AutomaticTaskScriptGrammarParser.PONTO_E_VIRGULA, 0); }
		public TerminalNode FORM_ATRIBUTO() { return getToken(AutomaticTaskScriptGrammarParser.FORM_ATRIBUTO, 0); }
		public FuncaoMudarDistritoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcaoMudarDistrito; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskScriptGrammarListener ) ((AutomaticTaskScriptGrammarListener)listener).enterFuncaoMudarDistrito(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskScriptGrammarListener ) ((AutomaticTaskScriptGrammarListener)listener).exitFuncaoMudarDistrito(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomaticTaskScriptGrammarVisitor ) return ((AutomaticTaskScriptGrammarVisitor<? extends T>)visitor).visitFuncaoMudarDistrito(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncaoMudarDistritoContext funcaoMudarDistrito() throws RecognitionException {
		FuncaoMudarDistritoContext _localctx = new FuncaoMudarDistritoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_funcaoMudarDistrito);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(T__3);
			setState(81);
			match(PARENTESE_ABRIR);
			setState(82);
			((FuncaoMudarDistritoContext)_localctx).campoDoDistritoNoFormulario = match(FORM_ATRIBUTO);
			setState(83);
			match(PARENTESE_FECHAR);
			setState(84);
			match(PONTO_E_VIRGULA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncaoMudarTelemovelContext extends ParserRuleContext {
		public Token campoDoTeleNoFormulario;
		public TerminalNode PARENTESE_ABRIR() { return getToken(AutomaticTaskScriptGrammarParser.PARENTESE_ABRIR, 0); }
		public TerminalNode PARENTESE_FECHAR() { return getToken(AutomaticTaskScriptGrammarParser.PARENTESE_FECHAR, 0); }
		public TerminalNode PONTO_E_VIRGULA() { return getToken(AutomaticTaskScriptGrammarParser.PONTO_E_VIRGULA, 0); }
		public TerminalNode FORM_ATRIBUTO() { return getToken(AutomaticTaskScriptGrammarParser.FORM_ATRIBUTO, 0); }
		public FuncaoMudarTelemovelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcaoMudarTelemovel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskScriptGrammarListener ) ((AutomaticTaskScriptGrammarListener)listener).enterFuncaoMudarTelemovel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskScriptGrammarListener ) ((AutomaticTaskScriptGrammarListener)listener).exitFuncaoMudarTelemovel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomaticTaskScriptGrammarVisitor ) return ((AutomaticTaskScriptGrammarVisitor<? extends T>)visitor).visitFuncaoMudarTelemovel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncaoMudarTelemovelContext funcaoMudarTelemovel() throws RecognitionException {
		FuncaoMudarTelemovelContext _localctx = new FuncaoMudarTelemovelContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_funcaoMudarTelemovel);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(T__4);
			setState(87);
			match(PARENTESE_ABRIR);
			setState(88);
			((FuncaoMudarTelemovelContext)_localctx).campoDoTeleNoFormulario = match(FORM_ATRIBUTO);
			setState(89);
			match(PARENTESE_FECHAR);
			setState(90);
			match(PONTO_E_VIRGULA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
